# db-app

./: .dockerignore  .env.example  .gitignore  .template.yaml  404.html  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  index.html  main.py  makefile  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tests.py
.cursor/rules/: astropy.mdc  codestyle.mdc  scripts.mdc  testing.mdc  user-interaction.mdc
.github/workflows/: app-deploy.yaml  build-docker.yaml  build-wheel.yaml  build.yaml  deployment-testing.yml  documentation-build.yml  documentation-deploy.yml  documentation.yml  infra-testing.yml  regression-testing.yml  release.yaml  testing.yml  tests.yml
adapter/: csv_adapter.py
administrator/: index.html
administrator/catalogs/: index.html
administrator/marking/: index.html
administrator/openapi/: index.html
administrator/vizier/: index.html
app/: cli.py
app/actions/: __init__.py  create_object.py  create_objects.py  create_source.py  get_object.py  get_source.py  get_source_list.py  search_objects.py
app/commands/: __init__.py  depot.py
app/data/: __init__.py  interface.py  postgres_storage.py  repository.py  template.py
app/domain/: __init__.py  cf4.py  cross_id_simultaneous_data_provider.py  dust.py  interface.py
app/entities/: __init__.py  layer0.py  object.py  task.py
app/lib/: tracing.py
app/schema/: __init__.py  auth.py  table.py  table_status.py
app/server/: __init__.py
app/tasks/: __init__.py  crossmatch.py  echo.py  interface.py  layer0_marking.py  layer1_import.py  layer2_import.py  layer2_import_designation.py  layer2_import_icrs.py  layer2_import_nature.py  layer2_import_redshift.py  layer2_orphan_cleanup.py  process.py  registry.py  remove_table.py  submit_crossmatch.py
client/: __init__.py  admin_client.py  client.py  config.py  error.py
configs/dev/: adminapi.yaml  config.yaml  dataapi.yaml  layer1_import.json  process.json  tasks.yaml
configs/prod/: adminapi.yaml  config.yaml  dataapi.yaml
configs/test/: adminapi.yaml  dataapi.yaml
data/: __init__.py
dev/change.ru/: index.html
dev/db_photometry.ru/: index.html
dev/documentation.ru/: index.html
dev/environment.ru/: index.html
dev/login.ru/: index.html
dev/system_diagram.ru/: index.html
docs/: index.md  index.ru.md  openapi.md
docs/administrator/: catalogs.md  index.md  marking.md  openapi.md  vizier.md
docs/dev/: change.ru.md  db_photometry.ru.md  documentation.ru.md  environment.ru.md  login.ru.md  system_diagram.ru.md
docs/handlers/: v1_admin_table_status.md
docs/upload/: create_table.ru.md  index.ru.md  upload_data.ru.md  vizier.ru.md
domain/: util.py
domain/model/: __init__.py  constants.py
domain/repositories/: layer_0_repository.py  layer_1_repository.py
domain/usecases/: __init__.py  cross_identify_use_case.py  exceptions.py  store_l0_use_case.py  transaction_0_1_use_case.py  transformation_0_1_use_case.py
domain/user_interaction/: interaction.py  interaction_argument.py  interaction_result.py
experiments/: bayes.py  bayes_analyze.py  bayes_theory.md  crossid.py  crossid_plot.ipynb  entities.py  plots.py  single_radius.py  two_radius.py
handlers/v1_admin_table_status/: index.html
index.ru/: index.html
infra/: deploy.py  deploy.sh  deployment.py  docker-compose.yaml  makefile  scripts.py
infra/configs/: dev.yaml
infra/scripts/: deploy-test-db.sh  deploy.sh  restart.sh
openapi/: index.html  swagger-21db05b0.html
plugins/: loader.py
plugins/matchers/: and_matcher.py  circle_matcher.py  ignore_if_no_name_matcher.py  ignore_if_no_redshift_matcher.py  ignore_no_name_matcher.py  ignore_no_redshift_matcher.py  levenshtein_matcher.py  velocity_close_matcher.py
plugins/solvers/: existing_only_one_above_threshold_solver.py  new_all_below_threshold_solver.py  or_solver.py
postgres/: dockerfile
postgres/drafts/: 00_pgc.sql  01_add_pgc.sql  02_add_datasets.sql  03_modify_cz.sql  04_nature.sql  05_photosys.sql  06_designation.sql  07_notes.sql  08_photometry.sql  08_totalmag.sql  09_isophote.sql  10_geometry.sql  11_dataviews_add.sql  11_update_dataviews.sql  12_hi_schemas.sql  13_modify_cz.sql  13_new_photometry.sql  14_modify_cz.sql  15_distance.sql  16_morph.sql  17_desi_filters.sql  V001__common.sql  V002__functions.sql  V003__passband.sql  V005__rawdata.sql  V006__ucd.sql  V101__icrs.sql  V102__designation.sql  V103__nature.sql  V104__redshift.sql  V105__photometry.sql  V106__equivalent_circle.sql  V107__geometry.sql  V108__aperture.sql  V109__distance.sql  V110__isophote.sql
postgres/migrations/: V001__common+rawdata.sql  V001__common.sql  V001__initial_structure.sql  V001__meta.sql  V002__common.sql  V002__designation.sql  V002__lev0_designation.sql  V003__functions.sql  V003__layer0.sql  V003__lev1_icrs.sql  V003__passband.sql  V003_functions.sql  V004__layer1_icrs.sql  V004__layer1_pgc.sql  V004__meta.sql  V004__passband.sql  V004_passband.sql  V005__layer0.sql  V005__layer1_designation.sql  V005__layer1_icrs.sql  V005__meta.sql  V005__rawdata.sql  V006__layer1_designation.sql  V006__layer1_redshift.sql  V006__rawdata.sql  V007__layer1_redshift.sql  V007__layer2.sql  V007__ucd.sql  V008__homogenization_rules.sql  V009__rawdata_pgc_index.sql  V010__layer0_modifiers.sql  V010__layer2_spatial_index.sql  V011__lev1_icrs.sql  V011__remove_rawdata_objects_columns.sql  V012__lev1_redshift.sql  V012__object_nature.sql  V012__remove_tasks.sql  V013__pgc.sql  V013_lev1_geometry.sql  V013_pgc.sql  (+78 more)
presentation/actions/: __init__.py  create_object.py  create_objects.py  create_source.py  get_object.py  get_source.py  get_source_list.py  search_objects.py
presentation/model/: __init__.py  object.py
presentation/server/: __init__.py
search/: search_index.json
tests/: env_test.py  server_test.py
tests/assets/: default_rules.csv
tests/converters/: coordinate_test.py  name_test.py
tests/data/: layer0_repository_test.py  mappers_test.py
tests/domain/: CoordinateDescrTets.py  Transaction01Test.py  Transform01Test.py  ValueDescrTest.py  add_data_test.py  create_table_test.py  cross_identify_test.py  (+11 more)
(+531 files in other folders)
