[project]
name = "hyperleda-backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.0.0",
    "astroquery>=0.4.9.post1",
    "bcrypt>=4.2.1",
    "click>=8.1.8",
    "jinja2>=3.1.5",
    "marshmallow>=3.26.0",
    "pandas>=2.2.3",
    "psycopg[binary,pool]>=3.2.4",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "regex>=2024.11.6",
    "rq>=2.1.0",
    "structlog>=25.1.0",
    "swagger-ui-py>=23.9.23",
    "marshmallow-generic>=1.0.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "starlette>=0.47.2",
    "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
test = [
    "pandas-stubs>=2.2.3.241126",
    "parameterized>=0.9.0",
    "pytest>=8.3.4",
    "testcontainers-postgres>=0.0.1rc1",
    "testcontainers-redis>=0.0.1rc1",
    "hyperleda-scripts",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
ignore = [
    "N818", # ignore SomeException -> SomeError rule
    "B024", # abstract class without abstract methods
    "B017", # ignore assertRaises(Exception)
    "B027", # empty method without abstract decorator
]
# see https://docs.astral.sh/ruff/rules/ for description of each rule set.
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "YTT",
    "B",
    "A",
    "C4",
    "DTZ",
    "PIE",
    "RET",
    "SLF",
    "PTH",
    "PLE",
    "FLY",
    "NPY201",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F403", # ignore star imports warning in __init__ files
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-W ignore::DeprecationWarning"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = "astropy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "astroquery.*"
ignore_missing_imports = true

[tool.uv.sources]
hyperleda-scripts = { git = "https://github.com/HyperLEDA/scripts.git" }
hyperleda = { git = "https://github.com/HyperLEDA/client.git" }
marshmallow-generic = { git = "https://github.com/Kraysent/marshmallow-generic.git" }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "datamodel-code-generator>=0.26.5",
    "mypy>=1.14.1",
    "pymdown-extensions>=10.14.1",
    "ruff>=0.9.3",
    "setuptools>=75.8.0",
    "types-psycopg2>=2.9.21.20250121",
    "types-pyyaml>=6.0.12.20241230",
    "types-regex>=2024.11.6.20241221",
    "hyperleda",
    "fabric>=3.2.2",
]
