[project]
name = "app"
version = "0.1.0"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "click~=8.3.1",
    "astropy>=7.1.0",
    "astroquery>=0.4.10",
    "bcrypt>=4.2.1",
    "jinja2>=3.1.5",
    "pandas>=2.3.2",
    "psycopg[binary,pool]>=3.2.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "regex>=2024.11.6",
    "rq>=2.1.0",
    "structlog>=25.1.0",
    "swagger-ui-py>=23.9.23",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "starlette>=0.47.2",
    "pydantic-settings>=2.10.1",
    "uncertainties>=3.2.3",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-psycopg>=0.61b0",
    "opentelemetry-exporter-otlp>=1.40.0",
]

[project.scripts]
"app" = "app.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [    
    # fixed version so no new linter/formatter errors are introduced over time
    # probably should not update outside the template
    "ruff~=0.15.0",
    "pytest~=9.0.2",
    "basedpyright~=1.38.3",

    "datamodel-code-generator>=0.26.5",
    "pymdown-extensions>=10.14.1",
    "setuptools>=75.8.0",
    "types-psycopg2>=2.9.21.20250121",
    "types-pyyaml>=6.0.12.20241230",
    "types-regex>=2024.11.6.20241221",
    "fabric>=3.2.2",
    "pandas-stubs>=2.3.2.250827",
    "parameterized>=0.9.0",
    "testcontainers-postgres>=0.0.1rc1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-W ignore::DeprecationWarning"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["."]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
ignore = [
    "N818", # ignore SomeException -> SomeError rule
    "B024", # abstract class without abstract methods
    "B017", # ignore assertRaises(Exception)
    "B027", # empty method without abstract decorator
]
# see https://docs.astral.sh/ruff/rules/ for description of each rule set.
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "YTT",
    "B",
    "A",
    "C4",
    "DTZ",
    "PIE",
    "RET",
    "SLF",
    "PTH",
    "PLE",
    "FLY",
    "NPY201",
    "ARG001",
    "PLC0415",
    "S101",
]

[tool.basedpyright]
typeCheckingMode = "off"
venvPath = "."
venv = ".venv"

### warns
reportDeprecated = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "warning"
reportMatchNotExhaustive = "warning"

### pyright issues
reportGeneralTypeIssues = "error"
reportFunctionMemberAccess = "error"
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportInvalidTypeForm = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportWildcardImportFromLibrary = "error"
reportAbstractUsage = "error"
reportAssertTypeFailure = "error"
reportCallIssue = "error"
reportInconsistentOverload = "error"
reportIndexIssue = "error"
reportInvalidTypeArguments = "error"
reportNoOverloadImplementation = "error"
reportRedeclaration = "error"
reportConstantRedefinition = "error"
reportPossiblyUnboundVariable = "error"
reportInvalidStringEscapeSequence = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportAssertAlwaysTrue = "error"
reportSelfClsParameterName = "error"
reportUndefinedVariable = "error"
reportUnhashable = "error"
reportUnsupportedDunderAll = "error"
reportUnusedCoroutine = "error"
reportUnusedExcept = "error"
reportUnusedExpression = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnreachable = "error"

### based pyright issues
reportIgnoreCommentWithoutRule = "error"
reportImplicitRelativeImport = "error"
reportUnsafeMultipleInheritance = "error"
reportImplicitAbstractClass = "error"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F403", # ignore star imports warning in __init__ files
]
"tests/**" = ["S101"]
